--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
@@ -20,6 +21,7 @@
     "mongoose": "^6.6.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "eslint": "^8.23.1"
   }
 }
