--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
